<resources>
    <string name="app_name">MyTrip</string>
    <string name="distancia">Distancia</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="Limpar">Limpar</string>
    <string name="valores_validos">Por favor, informe valores válidos!</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="kms_por_litro">Kms por Litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>

</resources>
